# parseguard-backend

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260215000001_create_users_table.sql  20260215000002_create_compliance_items.sql  20260215000003_create_documents.sql  20260215000004_create_risk_scores.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: ai.rs  auth.rs  compliance.rs  dashboard.rs  documents.rs  mod.rs  risk_scores.rs
src/db/: mod.rs
src/db/repository/: compliance_repository.rs  dashboard_repository.rs  document_repository.rs  mod.rs  risk_score_repository.rs  user_repository.rs
src/middleware/: auth.rs  logger.rs  mod.rs
src/models/: compliance.rs  document.rs  mod.rs  risk_score.rs  user.rs
src/services/: ai_service.rs  auth_service.rs  base.rs  dashboard_service.rs  mod.rs
src/utils/: file_handler.rs  mod.rs
tests/: api_auth.rs  api_dashboard.rs  health_check.rs
tests/common/: mod.rs
