[package]
name = "parseguard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.16"
uuid = { version = "1.0", features = ["serde", "v4"] }

# Environment & Configuration
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client (for OLLAMA)
reqwest = { version = "0.12", features = ["json"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[[bin]]
name = "parseguard-backend"
path = "src/main.rs"
